Modal logic basics and a first characterization

--- a/document/root.tex
+++ b/document/root.tex
@@ -1,5 +1,6 @@
 \documentclass[11pt,a4paper]{article}
 \usepackage{isabelle,isabellesym}
+\usepackage{amssymb}
 
 % further packages required for unusual symbols (see also
 % isabellesym.sty), use only when needed
@@ -35,7 +36,7 @@
 
 \begin{document}
 
-\title{Simplistic ZFC Formalization}
+\title{FormSys2 Formalization}
 \author{Sebastian Ullrich}
 \maketitle
 
